Fix contrast issue in footer

--- a/stylesheets/_component.footer.scss
+++ b/stylesheets/_component.footer.scss
@@ -9,7 +9,7 @@
     background-color: color(white);
     border-top: 1px solid color(gray, lightest);
     bottom: 0;
-    color: #999;
+    color: color(text, help);
     font-size: $font-size-small;
     left: 0;
     padding: 6px $gutter-width;
